--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
     "core-js": "^3.6.5",
+    "luxon": "^2.0.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/luxon": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
