--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "aws-amplify": "^4.2.5",
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
